--- a/views/_header.pug
+++ b/views/_header.pug
@@ -5,9 +5,11 @@ header.header
     div.header__logo
         img(src="/img/logo-white.png", alt="Natours logo")
     nav.nav.nav--user 
-        a.nav__el(href="#") My bookings 
-        a.nav__el(href="#") 
-            img.nav__user-img(src="/img/user.jpg", alt="User photo")
-            span Chandan 
-        a.nav__el(href="/login") Login
-        a.nav__el.nav__el--cta(href="/signup") Sign up
+        if user
+            a.nav__el.nav__el--logout LOG OUT
+            a.nav__el(href="#") 
+                img.nav__user-img(src=`img/users/${user.photo}`, alt=`pic ${user.name}`)
+                span= user.name.split(' ')[0] 
+        else
+            a.nav__el(href="/login") Login
+            a.nav__el.nav__el--cta(href="/signup") Sign up
