--- a/views/base.pug
+++ b/views/base.pug
@@ -23,4 +23,4 @@ html
     script(src="/js/mapbox.js")
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
     script(src="/js/login.js")
-
+//-    script(src='app.js');
