new file uploaded

--- a/views/base.pug
+++ b/views/base.pug
@@ -22,5 +22,7 @@ html
 
     script(src="/js/mapbox.js")
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
-    script(src="/js/login.js")
+    script(src="/js/index.js")
+    //- script(src="/js/updateAccount.js")
+    //- script(type="module"  src="/Public/js/index.js") 
 //-    script(src='app.js');
