--- a/views/tour.pug
+++ b/views/tour.pug
@@ -17,8 +17,8 @@ mixin overviewBox(label,text, icon)
 mixin reviewBox(review)
     .reviews__card
         .reviews__avatar
-            img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`)
-            h6.reviews__user= review.user.name
+            -FIXME: //- img.reviews__avatar-img(src=`/img/users/${review.user.photo}`, alt=`${review.user.name}`)
+            //- h6.reviews__user= review.user.name
         p.reviews__text= review.review
         .reviews__rating
             each star in [1,2,3,4,5]
