--- a/views/emails/baseEmail.pug
+++ b/views/emails/baseEmail.pug
@@ -37,7 +37,7 @@ include _style
                                     tbody
                                         tr
                                             td.content-block
-                                                span.apple-link Natours Inc, 123 Nowhere Road, San Francisco CA 99999
+                                                span.apple-link Natours Inc, 123 Nowhere Road, INDIA
                                                 br
                                                 |  Don't like these emails? 
                                                 a(href='#') Unsubscribe
