--- a/views/tour.pug
+++ b/views/tour.pug
@@ -4,6 +4,7 @@ extends base
 block append head 
     script(src="https://cdn.maptiler.com/maptiler-sdk-js/v1.1.1/maptiler-sdk.umd.min.js")
     link(href="https://cdn.maptiler.com/maptiler-sdk-js/v1.1.1/maptiler-sdk.css" rel="stylesheet")
+    script(src='https://js.stripe.com/v3')
 
 //- rendering tour overview details  
 mixin overviewBox(label,text, icon)
@@ -95,4 +96,7 @@ block content
             .cta__content
                 h2.heading-secondary What are you waiting for?
                 p.cta__text=`${tour.duration} days. 1 adventure. Infinite memories. Make it yours today!`
-                button.btn.btn--green.span-all-rows Book tour now!
+                if user
+                    button.btn.btn--green.span-all-rows#book-tour(data-tour-id= `${tour.id}`) Book tour now!
+                else 
+                    a.btn.btn--green.span-all-rows(href='/login') Login to Book Tour
