--- a/views/base.pug
+++ b/views/base.pug
@@ -21,8 +21,6 @@ html
         include _footer
 
     script(src="/js/mapbox.js")
+    script(src='https://js.stripe.com/v3')
     script(src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js")
     script(src="/js/index.js")
-    //- script(src="/js/updateAccount.js")
-    //- script(type="module"  src="/Public/js/index.js") 
-//-    script(src='app.js');
